# EHR-Media-Intelligence-Platform

./: .gitignore  README.md  WRITEUP.md  pyproject.toml
app/api/: routes.py
app/db/: store.py
app/fhir/: mapper.py  pipeline.py  validator.py
app/frontend/: index.html
app/ingestion/: cleaner.py  models.py  parser.py  pipeline.py
app/search/: embedder.py
app/summarizer/: cache.py  llm.py  pipeline.py
data/raw/: clinical_notes.csv  imaging_reports.csv  lab_results.csv  patients_ehr_export.json
scripts/: generate_summaries.py  transform_synthea.py
tests/: test_api.py  test_cleaning.py  test_fhir.py
