[project]
name = "ehr-media-intelligence"
version = "0.1.0"
description = "AI-powered EHR media intelligence platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0",
    "fhir.resources>=8.0.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "anthropic>=0.30.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
